--- a/CSS-3/index.html
+++ b/CSS-3/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html lang = "en-us">
+  
+  <head>
+    <meta charset="UTF-8">
+    
+    <title>Introduction to Malaysian Cuisine by yeongfoongchoo</title>
+    
+  </head>
+</html>
+
 
 </html>
 
