editing css features

--- a/CSS-3/index.html
+++ b/CSS-3/index.html
@@ -9,13 +9,15 @@
     <style>
       h1 {
         color: blue;
+        background-color: yellow;
         font-size : 2em;
-        font-family: "Comic";
+        font-family: "Comic Sans MS", cursive, sans-serif;
       }
       
       p {
         color: green;
-        font-family: "Comic";
+        background-color: orange;
+        font-family: "Comic Sans MS", cursive, sans-serif;
       }
     </style>
   </head>
