--- a/CSS-3/index.html
+++ b/CSS-3/index.html
@@ -50,7 +50,7 @@
       /************ Large devices only *********************/
       @media (min-width: 992px){
         .food1 {
-          float : left;
+          float : left, top;
           border: 1px solid blue;
           width : 33.33%;
         }
@@ -60,7 +60,7 @@
       /************ Medium devices only *********************/
       @media ((min-width: 768px) and (max-width: 991px)) {
         .food1 {
-          float : left;
+          float : left, top;
           border: 1px solid blue;
           width : 50%;
         }
@@ -70,7 +70,7 @@
       /************ Small devices only *********************/
       @media (max-width: 767px){
         .food1 {
-          float : left;
+          float : left, top;
           border: 1px solid blue;
           width : 100%;
         }
